Fix horizontal overflowing content

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,6 +14,7 @@
 html {
 	min-height: 100vh;
 	color: #666666;
+	overflow: hidden;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 	font-size: 15px;
 	font-style: normal;
@@ -28,6 +29,7 @@ body {
 	background-color: #ffffff;
 	color: #666666;
 	min-height: 100vh;
+	overflow: hidden;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 	font-size: 15px;
 	font-style: normal;
