--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -17,6 +17,7 @@
 html {
 	min-height: 100vh;
 	color: $color_text; // default
+	overflow: hidden;
 
 	@include base(); // default
 }
@@ -26,6 +27,7 @@ body {
 	background-color: $color_bg; // default
 	color: $color_text; // default
 	min-height: 100vh;
+	overflow: hidden;
 
 	@include base(); // default
 
